# sentinel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  skills-lock.json
orchestrator/: pyproject.toml
orchestrator/src/orchestrator/: __main__.py  config.py  logging.py  models.py
orchestrator/src/orchestrator/agents/: base.py  catalyst.py  correlation.py  market.py  positioning.py  proposer.py  sentiment.py  technical.py  utils.py
orchestrator/src/orchestrator/approval/: manager.py
orchestrator/src/orchestrator/eval/: consistency.py  dataset.py  (+2 more)
orchestrator/tests/: conftest.py
orchestrator/tests/integration/: test_pipeline_integration.py
orchestrator/tests/unit/: test_agent_base.py  test_agent_catalyst.py  test_agent_correlation.py  test_agent_market.py  test_agent_positioning.py  test_agent_proposer.py  test_agent_sentiment.py  test_agent_technical.py  test_agent_utils.py  test_aggregator.py  test_approval_manager.py  test_backend.py  test_bot_price_board.py  test_config.py  test_data_fetcher.py  test_data_fetcher_extended.py  test_equity_provider.py  test_eval_consistency.py  test_eval_dataset.py  test_eval_runner.py  test_eval_scorers.py  test_evaluator.py  test_exchange.py  test_execution_plan.py  test_execution_planner.py  test_executor.py  test_external_data.py  test_formatters.py  test_formatters_evaluator.py  test_formatters_execution_plan.py  test_live_executor.py  test_llm_client.py  test_logging.py  test_main.py  test_main_cli.py  test_migrations.py  test_models.py  test_models_new.py  test_paper_engine.py  test_paper_trading_flow.py  (+14 more)
(+93 files in other folders)
