[project]
name = "orchestrator"
version = "0.1.0"
description = "Multi-LLM trade proposal orchestrator"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "ccxt>=4.5.38",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=22.6",
    "sqlmodel>=0.0.34",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
